# dagster-slurm

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  RAPIDS_EXAMPLE_PLAN.md  README.md  SKILLS.md  devenv.nix  devenv.yaml  docker-compose.ci.yml  docker-compose.yml  dprint.json  justfile  pyproject.toml
.agent-skills/: README.md
.agent-skills/metaxy/: SKILL.md
.agent-skills/metaxy/examples/: cli.md  configuration.md  feature-definitions.md  metadata-stores.md  testing.md
.agent-skills/stax/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  user-story.md
.github/actions/setup-devenv/: action.yml
.github/workflows/: docs.yaml  library.yaml  pr-title-from-branch.yaml  render-pdf.yml  slides.yaml  slurm-image-builder.yml  tutorial.yaml
docker/master/: Dockerfile  docker-entrypoint.sh
docker/node/: Dockerfile  docker-entrypoint.sh
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  paper.bib  paper.md  sidebars.ts
docs/docs/: intro.md  slides-hackathon.mdx  slides-multimodal.mdx  slides-scipy2026.mdx  slides.mdx
docs/docs/api/: api.md  api_core.md  api_ray.md  api_spark.md  index.md
docs/docs/applications/: document-preprocessing-docling.md  topic-modeling-rapids.md
docs/docs/contributing/: contributing.md  develop_slurm_locally.md  new_package.md  release.md
docs/docs/how-to/: environment-packaging.md  execution-modes.md  hpc-leonardo.md  hpc-musica.md  hpc-tu-wien-datalab.md  hpc-vsc-5.md  prepare_production_style_runs.md  troubleshooting.md  vsc5.md
docs/docs/integration-ray/: dagster-slurm-ray.md  docling-example.md  ray.md
docs/docs/integration-spark/: dagster-slurm-spark.md  spark.md
docs/sphinx/source/: api_core.rst  api_ray.rst  api_spark.rst  conf.py  index.rst
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/: Root.tsx
etc/: cgroup.conf  gres.conf  slurm.conf
examples/: .env.enc  .gitignore  Makefile  README.md  justfile  metaxy.toml  public-age-keys.txt  pyproject.toml  workspace.yaml
examples/dagster_slurm_example/: __init__.py
examples/dagster_slurm_example/defs/: shell_integration.py
examples/dagster_slurm_example/defs/ray/: ray_integration.py  ray_slurm.py
examples/dagster_slurm_example/defs/shell/: external_file.py  helpers.py  shell_external.py  shell_integration.py  shell_integration_test.py  test.py
examples/dagster_slurm_example/resources/: __init__.py
examples/dagster_slurm_example_tests/: test_defs_load.py
examples/projects/dagster-slurm-example/: pyproject.toml
examples/projects/dagster-slurm-example-hpc-workload/: pyproject.toml
examples/projects/dagster-slurm-example-hpc-workload/dagster_slurm_example_hpc_workload/rapids_topics/: __init__.py  aggregate_topics.py  hdbscan_cluster.py  lda_train.py  prepare_corpus.py  topic_map.py  umap_reduce.py
examples/projects/dagster-slurm-example-hpc-workload/dagster_slurm_example_hpc_workload/ray/: compute_embeddings_metaxy.py  infer_ray.py  process_documents_docling.py  process_documents_docling_metaxy.py  ray_external2.py  ray_slurm.py  register_input_texts_metaxy.py  train_ray.py
examples/projects/dagster-slurm-example-hpc-workload/dagster_slurm_example_hpc_workload/shell/: aggregate.py  multi_asset_example.py  multi_asset_example_checking.py  process.py  shell_external.py  shell_integration_test.py
examples/projects/dagster-slurm-example-shared/: pyproject.toml
examples/projects/dagster-slurm-example-shared/dagster_slurm_example_shared/: __init__.py  metaxy_features.py  paths.py
examples/projects/dagster-slurm-example/dagster_slurm_example/: definitions.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/: shared.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/metaxy/: simple_metaxy_assets.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/rapids_topics/: __init__.py  topic_assets.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/ray/: docling_assets.py  metaxy_docling_assets.py  metaxy_ray_assets.py  ray_assets.py  ray_integration.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/shell/: shell_external.py  shell_integration.py  shell_integration_test.py  simple_assets.py
examples/projects/dagster-slurm-example/dagster_slurm_example/defs/spark/: spark_assets.py
examples/projects/dagster-slurm-example/dagster_slurm_example/resources/: __init__.py  lazy_local_ray.py
examples/projects/dagster-slurm-example/dagster_slurm_example_tests/: test_defs_load.py  test_docling_warmup.py  test_partitioned_metaxy_single_key.py  test_rapids_topics.py
examples/scripts/: cleanup_all.sh  deploy_environment.py  download_docling_models.py  metaxy_incremental_minidemo.py  pack_environment.py  refresh_step_auth.py
exploration/: test.ipynb  test.py
nix/: bun-1_3_14.nix  pixi-0_73_0.nix
projects/dagster-slurm/: .python-semantic-release.toml  README.md  pyproject.toml
projects/dagster-slurm-ray/: README.md  pyproject.toml
projects/dagster-slurm-ray/dagster_slurm_ray/: __init__.py  slurm-launch.py
projects/dagster-slurm-spark/: README.md  pyproject.toml
projects/dagster-slurm-spark/dagster_slurm_spark/: __init__.py
projects/dagster-slurm/dagster_slurm/: __init__.py  _compat.py  calculator.py  docker_runner.py  local_message_reader.py  local_runner.py  sensors.py  slurm_factory.py  slurm_pipes_client.py  slurm_runner.py  ssh_helpers.py  ssh_message_reader.py  ssh_runner.py
projects/dagster-slurm/dagster_slurm_test/: conftest.py  dummy_test.py  test_cancellation.py  test_cli_integration.py  test_dagster_reattach.py  test_env_caching.py  test_extra_files.py  test_integration.py  test_launchers.py  test_message_readers.py  (+12 more)
scripts/: git_clean_local_branches.sh  verify_distributions.py
services/slurm/: Dockerfile  LICENSE  README.md  cgroup.conf  docker-entrypoint.sh  slurm.conf  submitter.bashrc
slides/: index.html  package.json  slides.md  slides_multimodal.md  slides_scipy2026.md  vite.config.ts
slides/theme/: package.json  style.css
(+45 files in other folders)
