[project]
name = "dagster-slurm-workspace"
version = "0.0.1"
description = "Workspace root - not published"
readme = "README.md"
authors = [
    { name = "geoheil", email = "georg.heiler@ascii.ac.at" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false 

[tool.uv.workspace]
members = ["projects/*"]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=0.23.1",
    "ruff>=0.12.3",
]

[tool.pixi.project]
# not supported  "win-64", due to pip ray
platforms = ["linux-64", "osx-arm64", "osx-64", "linux-aarch64"]
channels = ["conda-forge"]

[tool.pixi.environments]
build = { features = ["build"], solve-group = "build" }

docs = { features = [
  "docs",
], solve-group = "docs", no-default-feature = true }

[tool.pixi.feature.build.pypi-dependencies]
uv = ">=0.8.6"
build = ">=1.3.0"

[tool.pixi.feature.docs]
channels = ["conda-forge", "https://prefix.dev/brads-forge"]
[tool.pixi.feature.docs.dependencies]
nodejs = "~=24.4.1"
bun = "~=1.2.19"


[tool.pixi.feature.build.tasks]
clean-lib = { cmd = "uv clean", cwd = "projects/dagster-slurm" }
build-lib = { cmd = "uv build", cwd = "projects/dagster-slurm",  depends-on = ["clean-lib"] }
publish-lib = { cmd = "uv publish --token $PYPI_TOKEN", depends-on = ["build-lib"] }

[tool.pixi.tasks.pre-commit-install]
cmd = "pre-commit install"
description = "install pre-commit hooks"

[tool.pixi.tasks.pre-commit-run]
cmd = "pre-commit run --all-files"
description = "run pre-commit on all files"

[tool.pixi.tasks.start]
cwd = "examples"
cmd = "pixi run -e dev --frozen start"
description = "Start example"
