[project]
name = "dagster_slurm_example_shared"
version = "1.0.0"
description = "Dagster slurm example shared library"
authors = [{ name = "geoheil", email = "georg.kf.heiler@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
