[project]
name = "dagster_slurm_example_shared"
version = "1.0.0"
description = "Dagster slurm example shared library"
authors = [{ name = "geoheil", email = "georg.kf.heiler@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
preview = ["pixi-build"]
channels = [
  "https://prefix.dev/conda-forge",
  "https://prefix.dev/pixi-build-backends",
]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = ">=0.4.0" }

[tool.pixi.package.host-dependencies]
hatchling = ">=1.27,<2.0"
